added docker; flyway for db initialization; updated liking quote; can now track user quote likes and unlikes; added quotelike entity repo and servicie;